build/log/idf_py_stderr_output_23410
In file included from /home/huyen_202414629/esp/esp-idf/components/esp_driver_gpio/include/driver/gpio.h:12,
                 from /home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/include/sds011.h:4,
                 from /home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/sds011.c:1:
/home/huyen_202414629/esp/esp-idf/components/esp_common/include/esp_err.h:22:25: error: expected identifier before numeric constant
   22 | #define ESP_OK          0       /*!< esp_err_t value indicating success (no error) */
      |                         ^
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/include/sds011.h:15:19: note: in expansion of macro 'ESP_OK'
   15 | #define SDS011_OK ESP_OK
      |                   ^~~~~~
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/include/sds011_consts.h:17:3: note: in expansion of macro 'SDS011_OK'
   17 |   SDS011_OK = 0,
      |   ^~~~~~~~~
In file included from /home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/sds011.c:9:
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/include/sds011_consts.h:34:6: error: conflicting types for 'sds011_begin'; have 'void(const uart_port_t,  const int,  const int)'
   34 | void sds011_begin(const uart_port_t uart_num,
      |      ^~~~~~~~~~~~
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/include/sds011.h:17:11: note: previous declaration of 'sds011_begin' with type 'esp_err_t(uart_port_t,  gpio_num_t,  gpio_num_t)' {aka 'int(uart_port_t,  gpio_num_t,  gpio_num_t)'}
   17 | esp_err_t sds011_begin(uart_port_t uart_num, gpio_num_t tx_gpio, gpio_num_t rx_gpio);
      |           ^~~~~~~~~~~~
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/include/sds011_consts.h:52:12: error: conflicting types for 'sds011_send_cmd_to_queue'; have 'sds011_err(const struct sds011_tx_packet *, TickType_t)' {aka 'sds011_err(const struct sds011_tx_packet *, long unsigned int)'}
   52 | sds011_err sds011_send_cmd_to_queue(const struct sds011_tx_packet* data,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/include/sds011.h:18:11: note: previous declaration of 'sds011_send_cmd_to_queue' with type 'esp_err_t(const struct sds011_tx_packet *, TickType_t)' {aka 'int(const struct sds011_tx_packet *, long unsigned int)'}
   18 | esp_err_t sds011_send_cmd_to_queue(const struct sds011_tx_packet *packet, TickType_t timeout);
      |           ^~~~~~~~~~~~~~~~~~~~~~~~
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/include/sds011_consts.h:74:12: error: conflicting types for 'sds011_recv_data_from_queue'; have 'sds011_err(struct sds011_rx_packet *, TickType_t)' {aka 'sds011_err(struct sds011_rx_packet *, long unsigned int)'}
   74 | sds011_err sds011_recv_data_from_queue(struct sds011_rx_packet* data_out,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/include/sds011.h:19:11: note: previous declaration of 'sds011_recv_data_from_queue' with type 'esp_err_t(struct sds011_rx_packet *, TickType_t)' {aka 'int(struct sds011_rx_packet *, long unsigned int)'}
   19 | esp_err_t sds011_recv_data_from_queue(struct sds011_rx_packet *packet, TickType_t timeout);
      |           ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/sds011.c: In function 'parse_data_frame':
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/sds011.c:34:21: error: 'SDS011_PACKET_HEAD' undeclared (first use in this function)
   34 |     if (frame[0] != SDS011_PACKET_HEAD || frame[1] != SDS011_DATA_RX ||
      |                     ^~~~~~~~~~~~~~~~~~
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/sds011.c:34:21: note: each undeclared identifier is reported only once for each function it appears in
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/sds011.c:34:55: error: 'SDS011_DATA_RX' undeclared (first use in this function); did you mean 'SDS011_BAUD_RATE'?
   34 |     if (frame[0] != SDS011_PACKET_HEAD || frame[1] != SDS011_DATA_RX ||
      |                                                       ^~~~~~~~~~~~~~
      |                                                       SDS011_BAUD_RATE
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/sds011.c:35:21: error: 'SDS011_PACKET_TAIL' undeclared (first use in this function)
   35 |         frame[9] != SDS011_PACKET_TAIL) {
      |                     ^~~~~~~~~~~~~~~~~~
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/sds011.c: In function 'sds011_rx_task':
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/sds011.c:74:33: error: 'SDS011_PACKET_HEAD' undeclared (first use in this function)
   74 |         if (pos == 0 && byte != SDS011_PACKET_HEAD) {
      |                                 ^~~~~~~~~~~~~~~~~~
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/sds011.c: In function 'sds011_send_cmd_to_queue':
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/sds011.c:131:18: error: 'SDS011_PACKET_HEAD' undeclared (first use in this function)
  131 |     command[0] = SDS011_PACKET_HEAD;
      |                  ^~~~~~~~~~~~~~~~~~
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/sds011.c:132:18: error: 'SDS011_CMD_TX' undeclared (first use in this function); did you mean 'SDS011_BAUD_RATE'?
  132 |     command[1] = SDS011_CMD_TX;
      |                  ^~~~~~~~~~~~~
      |                  SDS011_BAUD_RATE
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/sds011.c:135:32: error: 'SDS011_TX_CMD_SLEEP_MODE' undeclared (first use in this function)
  135 |     if (packet->sub_command == SDS011_TX_CMD_SLEEP_MODE) {
      |                                ^~~~~~~~~~~~~~~~~~~~~~~~
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/sds011.c:138:39: error: 'SDS011_TX_CMD_REPORT_MODE' undeclared (first use in this function)
  138 |     } else if (packet->sub_command == SDS011_TX_CMD_REPORT_MODE) {
      |                                       ^~~~~~~~~~~~~~~~~~~~~~~~~
/home/huyen_202414629/esp/esp-idf/esp32-light-monitor/components/sds011/sds011.c:146:19: error: 'SDS011_PACKET_TAIL' undeclared (first use in this function)
  146 |     command[18] = SDS011_PACKET_TAIL;
      |                   ^~~~~~~~~~~~~~~~~~
make[3]: *** [esp-idf/sds011/CMakeFiles/__idf_sds011.dir/build.make:76: esp-idf/sds011/CMakeFiles/__idf_sds011.dir/sds011.c.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:5782: esp-idf/sds011/CMakeFiles/__idf_sds011.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:2520: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:286: flash] Error 2
